migration/k3s/deployment/grafana-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-server
  labels:
    app: grafana-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-server
  template:
    metadata:
      labels:
        app: grafana-server
    spec:
      restartPolicy: Always
      containers:
        - name: grafana-server
          image: nazariazargul/grafana-server
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-server
spec:
  selector:
    app: grafana-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
